# ProjectX

./: .gitignore  CMakeLists.txt
ConfigReader/: CMakeLists.txt  README.md  configReader.cpp  configReader.h  file.config
ConfigReader/test/: CMakeLists.txt  file.config  main.cpp
